--- a/ShooterSwag/res/values/strings.xml
+++ b/ShooterSwag/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="sNewGame">New Game</string>
+    <string name="sNewString">NewString</string>
 
 </resources>
